tests/src/snapshots/fe_compiler_tests__analysis__case_016_empty.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Empty": Contract(
            Contract {
                name: "Empty",
                functions: [],
            },
        ),
    },
}

note: 
  ┌─ features/empty.fe:1:1
  │  
1 │ ╭ contract Empty:
2 │ │   lonely: u256
  │ ╰──────────────^ attributes hash: 9947701623212590258
  │  
  = ContractAttributes {
        public_functions: [],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
    }

note: 
  ┌─ features/empty.fe:2:11
  │
2 │   lonely: u256
  │           ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )


